# scandoc

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt  run.py
2pdf/: readme.txt
src/scandoc/: interactive_get_contour.py  main_cli.py  polygon_interacter.py  scan.py
